--- a/fuelQuoteForm.css
+++ b/fuelQuoteForm.css
@@ -1,55 +1,52 @@
 body {
-  background-color: LightSteelBlue;
-  font-family: Arial;
+	background-color: LightSteelBlue;
+	font-family: Arial;
 }
 
 #formBox {
-  position: relative;
-
-  background-color: white;
-
-  width: 50%;
-  height: 50%;
-
-  margin: auto;
-  margin-top: 10%;
-  border: 3px solid green;
-  padding: 10px;
+	position: relative;	
+	background-color: white;
+	width: 35%;
+	height: 50%;	
+	margin: auto;
+	margin-top: 10%;
+	border: 3px solid green;
+	padding: 10px;
 }
 
 #formHeader {
-  font-size: 40px;
-  margin-left: 5%;
+	font-size: 35px;
+	margin-left: 5%;
+	text-align: center;
 }
 
-#fuelQuoteForm {
-  width: 50%;
-  height: 20%;
-  margin: 0 auto;
-  margin-top: 10%;
+#signUpForm {
+	width: 70%;
+	height: 20%;
+	margin: 0 auto;
+	margin-top: 10%;
 }
 
-#calculateButton {
-  font-size: 15;
-  color: white;
-  text-align: center;
+#loginText {
+	font-size: 15;
+}
 
-  width: 80px;
-  height: 30px;
-
-  padding: 2px 2px;
-  border: 3px solid #225478;
-  margin-right: 12px;
-
-  background-color: #4489cf;
-  display: inline-block;
+#signUpButton {
+	font-size: 15;
+	color: white;
+	text-align: center;	
+	width: 130px;
+	height: 30px;
+	padding: 2px 2px;
+	border: 3px solid #225478;
+	background-color: #4489cf;
+	display: inline-block;
 }
 
 .formLabel {
-  font-size: 20;
+	font-size: 20;
 }
 
 .formField {
-  width: 100%;
-  font-size: 15;
+	font-size: 15;
 }
